 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/06:
   * Changing session.forcePseudotransparency no longer requires restart,
     also a little code cleanup in FbTk/Transparent.cc/hh
     (Mark)
     Slit.cc Menu.cc Toolbar.cc FbWinFrame.cc fluxbox.cc
   * Move triangle drawing into a generic function in FbDrawable (Simon)
     Make submenu triangles in MenuItems proportional to the icon size
     (alternate implementation of sf.net patch #1526813)
     FbTk/... FbDrawable.hh/cc MenuItem.cc
     ArrowButton.hh/cc WinButton.cc ToolFactory.cc
*07/01/05:
   * When a client in an unfocused tab creates a transient window, set that
     client to the active tab (Mark)
     Window.cc
   * Window wasn't staying focused when dragging across workspaces with
     outline window moving (Mark)
     Window.cc
   * Fix placement of window menu with toolbar at the top of the screen,
     and remove titlebar from window menu (Mark)
     Window.cc IconButton.cc
   * Don't change focus to a window that doesn't accept focus (Mark)
     FocusControl.cc
   * Only grab keybindings on screens managed by fluxbox (Mark)
     fluxbox.hh Keys.cc/hh FbTk/KeyUtil.cc/hh
   * Fix locale being applied to the clock. (Simon)
     - Also fixed a likely locale-killer for BSDs (without nl_langinfo)
     ClockTool.hh/cc FbTk/FbString.cc
   * Fix nls digit strings to prefix with zero "%4d" => "%04d" for proper 
     spacing (Simon)
     Screen.cc nls/fluxbox-nls.hh nls/*/*.m
   * Fix loading of rotated fonts on style change (Simon)
     FbTk/... FontImp.hh XftFontImp.hh/cc XmbFontImp.hh/cc XFontImp.hh/cc
   * Change default Xft font to "monospace" (was "fixed") (Simon)
     - The "fixed" font loads a bitmap Xfont
     - Note that bitmap fonts do not rotate properly, and especially the 
       baseline isn't adjusted for the lack of rotation. Thus we recommend
       that if you are using a bitmapped font (e.g. artwiz), then specify it